# conjure-rust

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.gradle  gradle.properties  gradlew  regenerate.sh  settings.gradle
conjure-codegen/: Cargo.toml  conjure-api-4.14.0.conjure.json  conjure-api-4.32.0.conjure.json  conjure-api-4.4.0.conjure.json  conjure-api-4.8.0.conjure.json  example-types-ir.json  example-types.yml
conjure-codegen-shared/: Cargo.toml
conjure-codegen-shared/src/: client.rs  lib.rs  path.rs
conjure-codegen/example-types/: example-types.yml
conjure-codegen/src/: aliases.rs  cargo_toml.rs  clients.rs  constants.rs  context.rs  enums.rs  errors.rs  http_paths.rs  human_size.rs  lib.rs  merge_toml.rs  objects.rs  servers.rs  unions.rs
conjure-codegen/src/example_types/: alias_as_map_key_example.rs  any_example.rs  any_map_example.rs  bearer_token_alias_example.rs  bearer_token_example.rs  binary_alias_example.rs  binary_example.rs  boolean_alias_example.rs  boolean_example.rs  covariant_list_example.rs  covariant_optional_example.rs  date_time_alias_example.rs  date_time_example.rs  double_alias_example.rs  double_example.rs  empty_object_example.rs  enum_example.rs  enum_field_example.rs  integer_alias_example.rs  integer_example.rs  list_example.rs  many_field_example.rs  map_alias_example.rs  map_example.rs  mod.rs  nested_string_alias_example.rs  optional_example.rs  primitive_optionals_example.rs  reference_alias_example.rs  reserved_key_example.rs  rid_alias_example.rs  rid_example.rs  safe_long_alias_example.rs  safe_long_example.rs  set_example.rs  single_union.rs  string_alias_example.rs  string_example.rs  union_.rs  union_type_example.rs  (+2 more)
conjure-codegen/src/example_types/another/: different_package.rs  mod.rs  test_service.rs
conjure-codegen/src/example_types/clients/: mod.rs
conjure-codegen/src/example_types/errors/: mod.rs
conjure-codegen/src/example_types/product/: alias_as_map_key_example.rs  aliased_binary.rs  aliased_string.rs  any_example.rs  any_map_example.rs  bearer_token_alias_example.rs  bearer_token_example.rs  binary_alias_example.rs  binary_example.rs  boolean_alias_example.rs  boolean_example.rs  covariant_list_example.rs  covariant_optional_example.rs  create_dataset_request.rs  date_time_alias_example.rs  date_time_example.rs  double_alias_example.rs  double_example.rs  empty_object_example.rs  mod.rs  (+29 more)
conjure-codegen/src/objects/: deserialize.rs  mod.rs  object.rs  serialize.rs
conjure-codegen/src/types/: alias_definition.rs  argument_definition.rs  argument_name.rs  auth_type.rs  body_parameter_type.rs  conjure_definition.rs  constant_definition.rs  cookie_auth_type.rs  documentation.rs  endpoint_definition.rs  endpoint_name.rs  enum_definition.rs  enum_value_definition.rs  error_code.rs  error_definition.rs  error_namespace.rs  external_reference.rs  field_definition.rs  field_name.rs  header_auth_type.rs  header_parameter_type.rs  http_method.rs  http_path.rs  list_type.rs  log_safety.rs  map_type.rs  mod.rs  object_definition.rs  optional_type.rs  parameter_id.rs  parameter_type.rs  path_parameter_type.rs  primitive_type.rs  query_parameter_type.rs  service_definition.rs  set_type.rs  type_.rs  type_definition.rs  type_name.rs  union_definition.rs
conjure-error/: Cargo.toml  error-types.conjure.json  error-types.yml
conjure-error/src/: error.rs  lib.rs  ser.rs
conjure-error/src/custom_types/: mod.rs  serializable_error.rs
conjure-error/src/types/: conflict.rs  custom_client.rs  custom_server.rs  error_code.rs  failed_precondition.rs  internal.rs  invalid_argument.rs  mod.rs  not_found.rs  permission_denied.rs  request_entity_too_large.rs  serializable_error.rs  timeout.rs
conjure-http/: Cargo.toml
conjure-http/src/: client.rs  encoding.rs  lib.rs  path_params.rs  private.rs  safe_params.rs  server.rs  uri_builder.rs
conjure-http/src/client/: conjure.rs  encoding.rs  mod.rs  runtime.rs
conjure-http/src/private/: client.rs  mod.rs  server.rs
conjure-http/src/query_params/: mod.rs  values.rs
conjure-http/src/server/: conjure.rs  encoding.rs  mod.rs  runtime.rs
conjure-macros/: Cargo.toml
conjure-macros/src/: client.rs  derive_with.rs  endpoints.rs  http_paths.rs  lib.rs  log_safety.rs  path.rs
conjure-object/: Cargo.toml
conjure-object/src/: double_key.rs  lib.rs  log_safety.rs  plain.rs  private.rs  safe_long.rs
conjure-object/src/any/: de.rs  mod.rs  ser.rs
conjure-object/src/bearer_token/: mod.rs  test.rs
conjure-object/src/resource_identifier/: mod.rs
conjure-rust/: Cargo.toml
conjure-rust/src/: main.rs
conjure-serde/: Cargo.toml
conjure-serde/src/: de.rs  lib.rs  ser.rs  test.rs
conjure-serde/src/cbor/: cbor_map_key_tests.rs  mod.rs  ser.rs  test.rs
conjure-serde/src/de/: client.rs  delegating_deserializer.rs  delegating_visitor.rs  mod.rs  null_collections_behavior.rs  server.rs  unknown_fields_behavior.rs  wrapping_deserializer.rs
conjure-serde/src/json/: mod.rs  ser.rs  test.rs
conjure-serde/src/smile/: mod.rs  ser.rs  smile_map_key_tests.rs  test.rs
conjure-test/: Cargo.toml  build.rs  test-ir-ext.json  test-ir.json  test.yml
conjure-test/src/: lib.rs  test.rs
conjure-test/src/compile_fail_tests/: mod.rs
conjure-test/src/test/: cbor_map_key_tests.rs  clients.rs  errors.rs  external_refs.rs  log_safety.rs  mod.rs  objects.rs  servers.rs  smile_map_key_tests.rs
conjure-types/: Cargo.toml  example-types-ir.json
conjure-types/src/: lib.rs  safe_long.rs
conjure-types/src/bearer_token/: mod.rs  test.rs
conjure-types/src/example_types/: bearer_token_example.rs  binary_alias_example.rs  binary_example.rs  covariant_optional_example.rs  date_time_alias_example.rs  double_alias_example.rs  enum_field_example.rs  integer_example.rs  list_example.rs  map_example.rs  mod.rs  nested_string_alias_example.rs  optional_example.rs  primitive_optionals_example.rs  reserved_key_example.rs  safe_long_alias_example.rs  safe_long_example.rs  single_union.rs  union_.rs  union_type_example.rs  uuid_example.rs
conjure-types/src/resource_identifier/: mod.rs
(+321 files in other folders)
