[workspace.package]
version = "5.0.0-rc1"

[workspace]
resolver = "2"
# must be in lexicographic order for publishing
members = [
    "conjure-serde",
    "conjure-object",
    "conjure-error",
    "conjure-macros",
    "conjure-http",
    "conjure-codegen",
    "conjure-rust",
    "conjure-test",
]
