[package]
name = "conjure-codegen"
version = "3.2.0"
authors = ["Steven Fackler <sfackler@palantir.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Rust code generation for Conjure definitions"
repository = "https://github.com/palantir/conjure-rust"
readme = "../README.md"

[package.metadata.docs.rs]
features = ["example-types"]

[features]
example-types = ["conjure-error", 'conjure-http']
proc-macro = ["quote/proc-macro", "proc-macro2/proc-macro"]

[dependencies]
heck = "0.4"
quote = { version = "1.0", default-features = false }
prettyplease = "0.1.11"
proc-macro2 = { version = "1.0", default-features = false }
failure = "0.1"
toml = "0.5"
serde = { version = "1", features = ["derive"] }
syn = "1"

conjure-object = { version = "3.2.0", path = "../conjure-object" }
conjure-serde = { version = "3.2.0", path = "../conjure-serde" }
conjure-error = { version = "3.2.0", optional = true, path = "../conjure-error" }
conjure-http = { version = "3.2.0", optional = true, path = "../conjure-http" }
