[package]
name = "conjure-codegen"
version.workspace = true
authors = ["Steven Fackler <sfackler@palantir.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Rust code generation for Conjure definitions"
repository = "https://github.com/palantir/conjure-rust"
readme = "../README.md"

[package.metadata.docs.rs]
features = ["example-types"]

[features]
example-types = ["conjure-error", 'conjure-http']
proc-macro = ["quote/proc-macro", "proc-macro2/proc-macro"]

[dependencies]
anyhow = "1.0"
heck = "0.5"
quote = { version = "1.0", default-features = false }
prettyplease = "0.2.0"
proc-macro2 = { version = "1.0", default-features = false }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
syn = "2"

conjure-object = { version = "4.10.0", path = "../conjure-object" }
conjure-serde = { version = "4.10.0", path = "../conjure-serde" }
conjure-error = { version = "4.10.0", optional = true, path = "../conjure-error" }
conjure-http = { version = "4.10.0", optional = true, path = "../conjure-http" }
