[package]
name = "conjure-error"
version = "3.1.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Runtime support for generated Conjure errors"
repository = "https://github.com/palantir/conjure-rust"
readme = "../README.md"

[dependencies]
backtrace = "0.3"
parking_lot = "0.12"
serde = "1.0"
uuid = { version = "1.1", features = ["v4"] }

conjure-object = { version = "3.1.0", path = "../conjure-object" }
