[package]
name = "conjure-error"
version.workspace = true
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Runtime support for generated Conjure errors"
repository = "https://github.com/palantir/conjure-rust"
readme = "../README.md"

[dependencies]
serde = "1.0"
uuid = { version = "1.1", features = ["v4"] }

conjure-object = { version = "5.1.0", path = "../conjure-object" }
