[package]
name = "conjure-http"
version = "3.6.4"
authors = ["Steven Fackler <sfackler@palantir.com>"]
edition = "2018"
license = "Apache-2.0"
description = "HTTP interfaces for generated Conjure services"
repository = "https://github.com/palantir/conjure-rust"
readme = "../README.md"

[features]
macros = ["conjure-macros"]

[dependencies]
async-trait = "0.1"
bytes = "1.0"
conjure-error = { version = "3.6.4", path = "../conjure-error" }
conjure-macros = { version = "3.6.4", path = "../conjure-macros", optional = true }
conjure-object = { version = "3.6.4", path = "../conjure-object" }
conjure-serde = { version = "3.6.4", path = "../conjure-serde" }
form_urlencoded = "1.0"
futures-core = "0.3"
futures-util = "0.3"
http = "0.2.5"
once_cell = "1.0"
percent-encoding = "2.1"
pin-utils = "0.1"
serde = "1.0"
