[package]
name = "conjure-object"
version = "3.6.2"
authors = ["Steven Fackler <sfackler@palantir.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Runtime support for generated Conjure objects"
repository = "https://github.com/palantir/conjure-rust"
readme = "../README.md"

[dependencies]
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
educe = { version = "0.4", default-features = false, features = [
    "Hash",
    "PartialEq",
    "Eq",
    "PartialOrd",
    "Ord",
] }
lazy_static = "1.0"
ordered-float = { version = "3", features = ["serde"] }
regex = { version = "1.3", default-features = false, features = ["std"] }
serde = "1.0"
serde_bytes = "0.11"
uuid = { version = "1.1", features = ["serde"] }

[dev-dependencies]
proptest = "1.0"
