[package]
name = "conjure-object"
version.workspace = true
authors = ["Steven Fackler <sfackler@palantir.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Runtime support for generated Conjure objects"
repository = "https://github.com/palantir/conjure-rust"
readme = "../README.md"

[features]
js = ["uuid/js"]

[dependencies]
bytes = { version = "1.0", features = ["serde"] }
base64 = "0.22"
chrono = { version = "0.4.26", default-features = false, features = ["clock", "std", "serde"] }
# FIXME remove in 6.0
educe = { version = "0.5", default-features = false, features = [
    "Hash",
    "PartialEq",
    "Eq",
    "PartialOrd",
    "Ord",
] }
conjure-macros = { version = "5.9.0", path = "../conjure-macros" }
lazy_static = "1.0"
ordered-float = { version = "5", features = ["serde"] }
regex = { version = "1.3", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
staged-builder = "0.2"
uuid = { version = "1.1", features = ["serde"] }

[dev-dependencies]
proptest = "1.0"
