[package]
name = "conjure-rust"
version.workspace = true
authors = ["Steven Fackler <sfackler@palantir.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"
toml = "0.8"

conjure-codegen = { version = "4.15.0", path = "../conjure-codegen" }
