[package]
name = "conjure-rust"
version.workspace = true
authors = ["Steven Fackler <sfackler@palantir.com>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"
toml = "0.9"

conjure-codegen = { version = "5.1.0", path = "../conjure-codegen" }
