[package]
name = "conjure-rust"
version.workspace = true
authors = ["Steven Fackler <sfackler@palantir.com>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"
toml = "0.9"

conjure-codegen = { version = "5.4.0-rc1", path = "../conjure-codegen" }
