[package]
name = "conjure-serde"
version.workspace = true
authors = ["Steven Fackler <sfackler@palantir.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Serde Serializer and Deserializer wrappers for Conjure"
repository = "https://github.com/palantir/conjure-rust"
readme = "../README.md"

[dependencies]
base64 = "0.22"
serde = "1.0"
serde_json = "1.0"
serde-smile = "0.2.2"

[dev-dependencies]
conjure-object = { version = "4.10.0", path = "../conjure-object" }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
