[package]
name = "conjure-serde"
version.workspace = true
authors = ["Steven Fackler <sfackler@palantir.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Serde Serializer and Deserializer wrappers for Conjure"
repository = "https://github.com/palantir/conjure-rust"
readme = "../README.md"

[dependencies]
base64 = "0.22"
serde = "1.0"
serde_json = { version = "1.0", features = ["float_roundtrip"] }
serde-smile = "0.3.1"

[dev-dependencies]
conjure-object = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
