[package]
name = "conjure-serde"
version.workspace = true
authors = ["Steven Fackler <sfackler@palantir.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Serde Serializer and Deserializer wrappers for Conjure"
repository = "https://github.com/palantir/conjure-rust"
readme = "../README.md"

[dependencies]
base64 = "0.22"
conjure-object = { version = "5.10.0", path = "../conjure-object" }
serde = "1.0"
serde_cbor_2 = "0.13"
serde_json = { version = "1.0", features = ["float_roundtrip"] }
serde-smile = "0.3.1"

[dev-dependencies]
conjure-codegen = { version = "5.10.0", path = "../conjure-codegen", features = ["example-types"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
