[package]
name = "conjure-test"
version = "3.5.0"
authors = ["Steven Fackler <sfackler@palantir.com>"]
edition = "2018"

[lib]
doctest = false

[dependencies]
conjure-object = { path = "../conjure-object" }
conjure-error = { path = "../conjure-error" }
conjure-http = { path = "../conjure-http" }

[dev-dependencies]
async-trait = "0.1"
bytes = "1.0"
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
base64 = "0.21"
http = "0.2"

conjure-serde = { path = "../conjure-serde" }

[build-dependencies]
conjure-codegen = { path = "../conjure-codegen" }
