[package]
name = "conjure-test"
version.workspace = true
authors = ["Steven Fackler <sfackler@palantir.com>"]
edition = "2021"

[dependencies]
conjure-object = { path = "../conjure-object" }
conjure-error = { path = "../conjure-error" }
conjure-http = { path = "../conjure-http" }

[dev-dependencies]
base64 = "0.22"
bytes = "1.0"
conjure-macros = { path = "../conjure-macros" }
conjure-serde = { path = "../conjure-serde" }
futures = "0.3"
http = "1.0"
mockall = "0.13.0"
serde = "1.0"
serde_json = "1.0"

[build-dependencies]
conjure-codegen = { path = "../conjure-codegen" }
