[package]
name = "conjure-types"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@palantir.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Type definitions for generated Conjure code"
repository = "https://github.com/palantir/conjure-rust"
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true

[dependencies]
serde = "1.0"
serde_bytes = "0.10"
serde-value = "0.5"
uuid = { version = "0.6", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

lazy_static = "1.0"
regex = "1.0"

[dev-dependencies]
proptest = "0.7"
